gloo-all/30-oidc-localhost/dex.yaml
---
# Source: dex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  labels:
    app.kubernetes.io/name: dex
    helm.sh/chart: dex-2.9.0
    app.kubernetes.io/instance: dex
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    targetPort: http
    port: 32000
  - name: grpc
    targetPort: grpc
    port: 35000
  selector:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex

---
# Source: dex/templates/deployment.yaml








apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    app.kubernetes.io/name: dex
    helm.sh/chart: dex-2.9.0
    app.kubernetes.io/instance: dex
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/component: dex
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: dex
      app.kubernetes.io/instance: dex
      app.kubernetes.io/component: dex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dex
        app.kubernetes.io/instance: dex
        app.kubernetes.io/component: dex
      annotations:
        checksum/config: 6a6046c2a70970514a47352341f32bb19f302cfaac1de3d90f7050f09d733706
    spec:
      serviceAccountName: dex
      nodeSelector:
          {}
          
      containers:
      - name: main
        image: "quay.io/dexidp/dex:v2.21.0"
        imagePullPolicy: IfNotPresent
        command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/cfg/config.yaml
        resources:
          null
          
        ports:
        - name: http
          containerPort: 5556
          protocol: TCP
        - name: grpc
          containerPort: 5000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 1
        volumeMounts:
        - mountPath: /etc/dex/cfg
          name: config
        - mountPath: /etc/dex/tls/grpc/server
          name: grpc-tls-server
        - mountPath: /etc/dex/tls/grpc/ca
          name: grpc-tls-ca
      volumes:
      - secret:
          defaultMode: 420
          items:
          - key: config.yaml
            path: config.yaml
          secretName: dex
        name: config
      - name: grpc-tls-server
        secret:
          defaultMode: 420
          secretName: "dex-grpc-server-tls"
      - name: grpc-tls-ca
        secret:
          defaultMode: 420
          secretName: "dex-grpc-ca"

---
# Source: dex/templates/ingress.yaml


---
# Source: dex/templates/poddisruptionbudget.yaml
