gloo-all/30-oidc-localhost/dex-oidc-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: httpbin-static
            namespace: gloo-system 
      options:
        prefixRewrite: '/headers'             
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-web-api-8080
            namespace: gloo-system
    options:
      extauth:
        configRef:
          name: oidc-dex
          namespace: gloo-system
